@@ -10,14 +10,14 @@
         <property name="package.name" value="S2Dao" />
         <property name="project.name" value="${phing.project.name}" />
         <property name="project.version" value="1.1.0" />
-        <property name="project.state" value="beta" />
+        <property name="project.state" value="state" />
         <property name="project.build.dir" value="${project.basedir}/build" />
         <property name="project.src.dir" value="${project.basedir}/src" />
         <property name="project.test.dir" value="${project.basedir}/test" />
         <property name="skeleton.src.dir" value="${project.build.dir}/skel" />
         <property name="test.src.dir" value="${project.build.dir}/test" />
         <property name="license.file" value="Apache_Software_License_2.0.txt" />
-        <property name="release.notes" value="Release Candidate version 5" />
+        <property name="release.notes" value="Release 1.1.0" />
     </target>
     
     <target name="info">
@@ -150,7 +150,6 @@
     </target>
     
     <target name="test" depends="prepare">
-        <!-- // FIXME -->
         <php expression="require_once '${project.test.dir}' . '/test.environment.php'"/>
         <php expression="require_once '${project.test.dir}' . '/setup.php'"/>
         <phpunit2 haltonfailure="false" printsummary="true">
