@@ -25,41 +25,32 @@
  * @author nowel
  */
 class S2Dao_BasicUpdateHandlerTest extends PHPUnit2_Framework_TestCase {
-    /**
-     * Runs the test methods of this class.
-     *
-     * @access public
-     * @static
-     */
+
+    private $dataSource = null;
+
     public static function main() {
         $suite  = new PHPUnit2_Framework_TestSuite("S2Dao_BasicUpdateHandlerTest");
         $result = PHPUnit2_TextUI_TestRunner::run($suite);
     }
 
-    /**
-     * Sets up the fixture, for example, open a network connection.
-     * This method is called before a test is executed.
-     *
-     * @access protected
-     */
     protected function setUp() {
+        $container = S2ContainerFactory::create(S2CONTAINER_PHP5_APP_DICON);
+        $this->dataSource = $container->getComponent("pdo.dataSource");
     }
 
-    /**
-     * Tears down the fixture, for example, close a network connection.
-     * This method is called after a test is executed.
-     *
-     * @access protected
-     */
     protected function tearDown() {
+        $this->dataSource = null;
+    }
+    
+    private function getDataSource(){
+        return $this->dataSource;
     }
 
-    /**
-     * @todo Implement testExecute().
-     */
-    public function testExecute() {
-        // Remove the following line when you implement this test.
-        throw new PHPUnit2_Framework_IncompleteTestError;
+    public function testExecuteTx() {
+        $sql = "update emp2 set ename = ?, comm = ? where empno = ?";
+        $handler = new S2Dao_BasicUpdateHandler($this->getDataSource(), $sql);
+        $ret = $handler->execute(array("SCOTT", null, 7788));
+        $this->assertEquals(1, $ret);
     }
 }
 ?>
